--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "description": "",
   "devDependencies": {
     "cypress": "^14.3.3",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^5.0.0",
+    "mochawesome-report-generator": "^6.2.0",
     "typescript": "^5.8.3"
   }
 }
-
